# orta

./: Cargo.toml
libast/: Cargo.toml
libast/src/: lib.rs
libcore/: Cargo.toml  rt.ll
libcore/src/: asm.rs  lib.rs  pipe.rs
libcore/src/linker/: mod.rs
libcore/tests/: hello  return  test
libgen/: Cargo.toml
libgen/src/: lib.rs
libgen/src/llvm/: mod.rs
libgen/src/llvmast/: bitwise.rs  cast.rs  method.rs  mod.rs  ptr.rs  slice.rs
libgen/src/llvmast/complex/: array.rs  mod.rs  structure.rs
liblex/: Cargo.toml
liblex/src/: error.rs  lib.rs
libopt/: Cargo.toml
libparse/: Cargo.toml
libparse/src/: lib.rs
libparse/src/ll/: array.rs  branch.rs  expr.rs  fun.rs  iter.rs  meta.rs  mod.rs  slice.rs
libsym/: Cargo.toml
libsym/src/: lib.rs  librt.rs
libtoken/: Cargo.toml
libtoken/src/: lib.rs
libtype/: Cargo.toml
libtype/src/: error.rs  lib.rs
libtype/src/check/: bitwise.rs  cast.rs  complex.rs  method.rs  mod.rs  ptr.rs  ret.rs
ortac/: Cargo.toml
ortac/src/: ext.rs  main.rs
ortac/tests/: array.orta  bprint.orta  digit.orta  fact.orta  fib.orta  fun.orta  input  loop.orta  pid.orta  ptr.orta  struct.orta  type
ortac/tests/ffi/: foreign.c  main.orta
